--- a/gcal/deadlines.html
+++ b/gcal/deadlines.html
@@ -300,7 +300,7 @@ INTSYS Web site: <a href="http://futuretransport.org/Detailed">http://futuretran
 <td>## EAI・urbiot@cyber (2020-07-23) <span id="5f1e4660a9"></span> <span style="color:#666;"><a href="#top">→top</a></span></td>
 </tr>
 <tr class="even">
-<td>December 2 - 4, 2020 | Viana do Castelo, Portugal Cyberspace Submission Deadline: July 23, 2020 (extended)</td>
+<td>December 2 - 4, 2020 | N/A Cyberspace Submission Deadline: August 3, 2020 (extended)</td>
 </tr>
 <tr class="odd">
 <td>EAI is proud to announce that Urb-IoT is going virtual and beyond borders.</td>
@@ -309,316 +309,136 @@ INTSYS Web site: <a href="http://futuretransport.org/Detailed">http://futuretran
 <td>Get the same full publication and indexing, enjoy EAI’s fair evaluation and recognition, present your paper to a global audience, and experience virtual meetings live as well as on-demand from the safety and comfort of your home.</td>
 </tr>
 <tr class="odd">
+<td>December 2 - 4, 2020 | Viana do Castelo, Portugal Cyberspace Submission Deadline: July 23, 2020 (extended)</td>
+</tr>
+<tr class="even">
+<td>EAI is proud to announce that Urb-IoT is going virtual and beyond borders.</td>
+</tr>
+<tr class="odd">
+<td>Get the same full publication and indexing, enjoy EAI’s fair evaluation and recognition, present your paper to a global audience, and experience virtual meetings live as well as on-demand from the safety and comfort of your home.</td>
+</tr>
+<tr class="even">
 <td>Urb-IoT 2020 will take place online due to safety concerns and travel restrictions caused by COVID-19. Although we will miss having everyone meet and connect in person, we feel strongly that knowledge exchange must continue, if not more so. That is why we have equipped our online conferences with live viewing with chat, virtual Q&amp;A, and a multitude of other measures to provide you with a great experience. All of this while making the registration for co-authors and non-authors completely free to give you the biggest possible audience. You can learn more about EAI’s online conferences here.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>sCOPE</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Urban IoT promises to deliver massive amounts of data and fundamentally change our understanding of these systems. This should have a very positive impact in the operation of many urban services, and lead to more resource-efficient and affordable infrastructures.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>However, the deployment of cutting edge IoT technology is not a solution just by itself. Its success depends on the ability to integrate the city fabric and become an integral part of urban services across multiple areas, such as mobility, buildings, utility, public safety, healthcare or education.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Also, taking in consideration the recent COVID-19 pandemic, visions and challenges for smart cities are now being greatly and dynamically influenced and changed. In this context, Urb-IoT 2020 also welcomes ambitious papers such as visioning or recent data analysis papers that reflect current world issues.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>We are pleased to invite you to submit your paper to Urb-IoT 2020. Submissions should be in English, following the Springer formatting guidelines (see Submission).</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Submit Paper</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Read More: Call for Papers</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Publication</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>All registered papers will be submitted for publishing by Springer and made available through SpringerLink Digital Library.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Proceedings will be submitted for inclusion in leading indexing services, Ei Compendex, ISI Web of Science, Scopus, CrossRef, Google Scholar, DBLP, as well as EAI’s own EU Digital Library (EUDL).</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Authors of selected papers will be invited to submit an extended version to a Special Issue in:</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Springer Mobile Networks and Applications (MONET) Journal (IF: 2.390) Springer Wireless Networks (WINET) Journal (IF: 2.405)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>All accepted authors will be eligible to submit an extended version in a fast track of:</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>EAI Endorsed Transactions on Internet of Things (Open Access) EAI Endorsed Transactions on Smart Cities (Open Access)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Additional publication opportunities:</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>EAI/Springer Innovations in Communications and Computing Book Series</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Important dates</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Submission Deadline: July 23, 2020 (extended)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Notification Deadline: september 3, 2020</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Camera-ready deadline: october 5, 2020</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Conference dates: december 2 - 4, 2020</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>EAI COMMUNITY BENEFI <span style="color:#666;"><a href="#top">→top</a></span></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>## CNSM@cyberspace (2020-07-24) <span id="f8c9a76f6c"></span> <span style="color:#666;"><a href="#top">→top</a></span></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Dear colleagues,</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>CNSM 2020 will be held as a virtual conference experience on 2-6 November 2020.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>The theme of the conference is: Management Challenges and Opportunities in the Era of Digital Transformation and AI</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>The extended deadline for paper submission to CNSM this year is: July 24th, 2020 (Firm Deadline!)</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Authors will present their work virtually to ensure both the safety of participants and wide dissemination. Thus, the registration rates will be very low.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Authors of selected papers, accepted for publication in the CNSM 2020 proceedings, will be invited to submit an extended version of their papers to the IEEE Transactions on Network and Service Management journal (impact factor: 4.682).</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Please consider submitting. More information is available at: <a href="http://www.cnsm-conf.org/2020/">http://www.cnsm-conf.org/2020/</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>====</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Welcome to CNSM 2020</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>COVID-19 Update: CNSM 2020 will go virtual!</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Following the advice and guidelines from healthcare officials and local authorities, CNSM 2020 will now be held virtually on 2-6 November 2020. Accepted papers for the CNSM 2020 will be published open access on the conference Web site with IFIP copyright, and will be submitted for possible inclusion in IEEE Xplore, ACM and IFIP Digital Libraries. Furthermore, registration fees for the CNSM 2020 will be drastically reduced.</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>The 16th International Conference on Network and Service Management (CNSM) is inviting authors to submit original contributions in the area of network and service management research. CNSM 2020 is a selective single-track conference, covering all aspects of the management of networks and services, pervasive systems, enterprises, and cloud computing environments. The core track will be accompanied by a series of workshops and poster sessions.</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Papers accepted and presented at CNSM 2020 will be published as open access on the conference website (with IFIP copyright), and will be submitted to IEEE Xplore Digital Library. Authors of selected papers, accepted for publication in the CNSM 2020 proceedings, will be invited to submit an extended version of their papers to the IEEE Transactions on Network and Service Management journal. Call for Papers</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Please download the CNSM CFP flyer here:</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>IMPORTANT DATES Paper Submission Deadline: July 10, 2020 Notification of Acceptance: August 20, 2020 Camera Ready Submissions: September 20, 2020 Tutorial Proposals: June 30, 2020 <span style="color:#666;"><a href="#top">→top</a></span></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>## EAI・mobiquitous★free (2020-07-31) <span id="90ef7f7aa4"></span> <span style="color:#666;"><a href="#top">→top</a></span></td>
-</tr>
-<tr class="odd">
-<td><a href="http://eai.mailmta.com/nl/link?c=6brh&amp;d=5r0&amp;h=j02i7og007gftjabas4fgq29b&amp;i=2s7&amp;iw=1&amp;p=H1009508845&amp;s=lp&amp;sn=3m3&amp;z=1st4">http://eai.mailmta.com/nl/link?c=6brh&amp;d=5r0&amp;h=j02i7og007gftjabas4fgq29b&amp;i=2s7&amp;iw=1&amp;p=H1009508845&amp;s=lp&amp;sn=3m3&amp;z=1st4</a></td>
-</tr>
-<tr class="even">
-<td>November 9 - 11, 2020 | Darmstadt, Germany Cyberspace Full Paper Submission Deadline: July 31, 2020 (extended) Workshop Paper Submission Deadline: August 28, 2020</td>
-</tr>
-<tr class="odd">
-<td>EAI MobiQuitous 2020 will be held as a fully-fledged online conference.</td>
-</tr>
-<tr class="even">
-<td>Due to the safety concerns and travel restrictions caused by COVID-19, EAI MobiQuitous 2020 will take place online in a live stream. Participants will still be able to enjoy unique interactive benefits – learn more.</td>
-</tr>
-<tr class="odd">
-<td>EAI MobiQuitous 2020 - 17th EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services November 9-11, 2020 Darmstadt, Germany Cyberspace</td>
-</tr>
-<tr class="even">
-<td>EAI MobiQuitous is a top ranked conference venue for researchers with a CORE conference ranking: A. MobiQuitous authors have enjoyed over 8300+ citations, with average 8,23 citations per paper and h-index 37 (Scopus).</td>
-</tr>
-<tr class="odd">
-<td>Call for papers</td>
-</tr>
-<tr class="even">
-<td>Indexed in</td>
-</tr>
-<tr class="odd">
-<td>Ei Compendex, ISI Web of Science, Scopus, CrossRef, Google Scholar, DBLP, and more.</td>
-</tr>
-<tr class="even">
-<td>Publication</td>
-</tr>
-<tr class="odd">
-<td>Mobile Networks and Applications (MONET) Journal (IF: 2.390)</td>
-</tr>
-<tr class="even">
-<td>EAI Endorsed Transactions on Mobile Communications and Applications</td>
-</tr>
-<tr class="odd">
-<td>Learn more</td>
-</tr>
-<tr class="even">
-<td>Get the recognition you deserve with EAI Index:</td>
-</tr>
-<tr class="odd">
-<td>- The first open and transparent way of recognizing great researchers worldwide</td>
-</tr>
-<tr class="even">
-<td>- Credits are awarded to all authors based on review, but regardless of acceptance</td>
-</tr>
-<tr class="odd">
-<td>- Members with top 0.1% EAI Index at the end of the year will become EAI Fellows</td>
-</tr>
-<tr class="even">
-<td>Find out more about EAI Index</td>
-</tr>
-<tr class="odd">
-<td>Call for papers</td>
-</tr>
-<tr class="even">
-<td>Past volumes indexed in</td>
-</tr>
-<tr class="odd">
-<td>Ei Compendex, ISI Web of Science, Scopus, CrossRef, Google Scholar, DBLP, and more.</td>
-</tr>
-<tr class="even">
-<td>Publication</td>
-</tr>
-<tr class="odd">
-<td>Mobile Networks and Applications (MONET) Journal (IF: 2.390)</td>
-</tr>
-<tr class="even">
-<td>EAI Endorsed Transactions on Mobile Communications and Applications</td>
-</tr>
-<tr class="odd">
-<td>Learn more</td>
-</tr>
-<tr class="even">
-<td><em> Submit a Full-length paper: </em></td>
-</tr>
-<tr class="odd">
-<td>Submit full paper</td>
-</tr>
-<tr class="even">
-<td>3rd Workshop on TC-CPS: Time-Critical Cyber Physical Systems</td>
-</tr>
-<tr class="odd">
-<td>Submit Workshop Paper</td>
-</tr>
-<tr class="even">
-<td>Workshop on Artificial Intelligence for Mobile and Ubiquitous Communication System</td>
-</tr>
-<tr class="odd">
-<td>Submit Workshop Paper</td>
-</tr>
-<tr class="even">
-<td>Workshop on e-Health and m-Health Technologies for Ambient Assisted Living and Healthcare</td>
-</tr>
-<tr class="odd">
-<td>Submit Workshop Paper</td>
-</tr>
-<tr class="even">
-<td>Paper Submission is now open for the 17th edition of MobiQuitous! Check out the Call for Papers. Take a look back at the previous edition of MobiQuitous here. MobiQuitous 2020 supports revolutionary EAI Community Review, find out more here. Every author receives EAI Index credits – regardless of acceptance. Learn more about EAI’s Recognition Program here. Get real feedback on your presentation from other registrants via EAI Compass.</td>
-</tr>
-<tr class="odd">
-<td>Welcome to the EAI Community</td>
-</tr>
-<tr class="even">
-<td>Let the EAI Community help you build your career with collaborative research, objective evaluation, and fair recognition:</td>
-</tr>
-<tr class="odd">
-<td>Extra visibility for your paper and fair review → Community Review Get credits to receive membership ranks and global recognition → EAI Index Real-time evaluation and feedback on your presentation on-site → EAI Compass</td>
-</tr>
-<tr class="even">
-<td>Publication</td>
-</tr>
-<tr class="odd">
-<td>We have applied to ACM for inclusion into the ACM International Conference Proceedings program (ICPS). If MobiQuitous 2020 is accepted into the ACM program, all accepted and presented papers will be published in ICPS and made available through ACM Digital Library.</td>
-</tr>
-<tr class="even">
-<td>MobiQuitous proceedings are indexed in leading indexing services, including Ei Compendex, ISI Web of Science, Scopus, CrossRef, Google Scholar, DBLP, as well as EAI’s own EU Digital Library (EUDL).</td>
-</tr>
-<tr class="odd">
-<td>Authors of selected best accepted and presented papers will be invited to submit an extended version to:</td>
-</tr>
-<tr class="even">
-<td>Mobile Networks and Applications (MONET) Journal (IF: 2.390)</td>
-</tr>
-<tr class="odd">
-<td>All accepted authors are eligible to submit an extended version in a fast track of:</td>
-</tr>
-<tr class="even">
-<td>EAI Endorsed Transactions on Mobile Communications and Applications</td>
-</tr>
-<tr class="odd">
-<td>Additional publication opportunities:</td>
-</tr>
-<tr class="even">
-<td>EAI/Springer Innovations in Communications and Computing Book Series</td>
-</tr>
-<tr class="odd">
-<td>Topics</td>
-</tr>
-<tr class="even">
-<td>About MobiQuitous 2020</td>
-</tr>
-<tr class="odd">
-<td>About EAI</td>
-</tr>
-<tr class="even">
-<td>Important dates</td>
-</tr>
-<tr class="odd">
-<td>Full Paper Submission deadline 5 July 2020 Notification deadline 19 August 2020 Registration Opens 21 August 2020 Camera-ready deadline 13 September 2020 Start of Conference 9 November 2020 End of Con <span style="color:#666;"><a href="#top">→top</a></span></td>
 </tr>
 <tr class="even">
 <td>## IEEEJ.bigdatarecommend (2020-07-31) <span id="2b9898baeb"></span> <span style="color:#666;"><a href="#top">→top</a></span></td>
-</tr>
-<tr class="odd">
-<td>BIG DATA MINING AND ANALYTICS ISSN 2096−0654 l l 01/06l l DOI: 10.26599/BDMA.2018.9020027 <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8254253">https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8254253</a></td>
-</tr>
-<tr class="even">
-<td>Call for Papers</td>
-</tr>
-<tr class="odd">
-<td>Special Issue on Intelligent Recommendation Systems and Big Data Analysis</td>
-</tr>
-<tr class="even">
-<td>Big Data Mining and Analytics is an international academic journal sponsored by Tsinghua University and published quarterly. It features on technologies to enable and accelerate big data discovery. All papers published are on the IEEE Xplore Digital Library with the open access mode. The journal is indexed and abstracted in DBLP Computer Science, Google Scholar, and Scopus (Elsevier). Big data comes from many applications such as social media, sensors, Internet of Things, scientific applications, surveillance, video and image archives. As part of Big Data, intelligent recommendation systems and big data analytics are rapidly evolving as new research fields which have become a key tool for the development of human activities, especially in the Healthcare sector. The goal of the Special Issue “Intelligent Recommendation Systems and Big Data Analysis” is to provide an international forum for scientists, engineers, and managers in academia, industry, and government to address recent research results and to present and discuss their ideas, theories, models, technologies, systems, tools, applications, work in progress and experiences, dealing with all theoretical and practical aspects on “intelligent recommendation systems and big data analysis” when applied in different sectors : Healthcare, Education, Utilities, Tourism, Telecommunication, Transport , Finance, …etc. A special attention will be paid to works that focus on health informatics solutions for early chronic disease (e.g., COVID-19) prediction, detection and prevention.</td>
-</tr>
-<tr class="odd">
-<td>Potential topics include but are not limited to the following:</td>
-</tr>
-<tr class="even">
-<td>- Big Data Modeling, Storage, Management, And Analytics - Big Data Intelligence - Big Data and Data Science - Temporal, Evolution and Versioning Aspects of Big Data - NoSQL Databases and Big Data - Intelligent Recommendation Systems - Clinical Data and Knowledge Management - Data mining Techniques and Data Warehouses - Innovative collaboration applications in big data environment - Security, Trust and Risk in Big Data - Intelligence Artificial and machine learning - Ubiquitous and Pervasive Computing - Cloud and grid computing for Big Data - IoT in Big data applications</td>
-</tr>
-<tr class="odd">
-<td>SUBMISSION GUIDELINES</td>
-</tr>
-<tr class="even">
-<td>Papers submitted to this special issue of the journal for possible publication must be original and must not be under consideration for publication in any other journals or conferences. Prospective authors should submit an electronic copy of their completed manuscript to <a href="https://mc03.manuscriptcentral.com/bdma">https://mc03.manuscriptcentral.com/bdma</a> with manuscript type as “Special Issue on Intelligent Recommendation Systems and Big Data Analysis”. Further information on the journal is available on the IEEE Xplore at: <a href="http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8254253.">http://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=8254253.</a></td>
-</tr>
-<tr class="odd">
-<td>IMPORTANT DATES</td>
-</tr>
-<tr class="even">
-<td>Submission date: July 31, 2020 Notification of acceptance: September 20, 2020 Review notification: August 30, 2020 Publication date: December 15, 2020</td>
-</tr>
-<tr class="odd">
-<td>GUEST EDITORS</td>
-</tr>
-<tr class="even">
-<td>Yousef FARHAOUI, FSTE, Moulay Ismail University, Morocco. Zouhaier BRAHMIA, University of Sfax, Tunisia. Mohammed FATTAH, EST, Moulay Ismail University, Morocco. Badraddine AGHOUTANE, FS, Moulay Ismail University, Morocco. Samaher AL-JANABI, SCIW, University of Babylon, Iraq. <span style="color:#666;"><a href="#top">→top</a></span></td>
 </tr>
 <tr class="odd">
 <td>## mdpi・V2Xcomm (2020-07-31) <span id="c4e9e6af93"></span> <span style="color:#666;"><a href="#top">→top</a></span></td>
