--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -10,12 +10,12 @@
 2020-07-20 <a href="#a496e2fbce"><strike>近畿大情報セキュリティ評価★推薦書</strike></a><br />
 2020-07-21 <a href="#a94f938232"><strike>東京大(missed13日締切)</strike></a><br />
 2020-07-24 <a href="#3154cd9345"><strike>慶應義塾.情報工学分野★推薦書</strike></a><br />
-2020-07-30 <a href="#a59d532b7d">滋賀大</a><br />
+2020-07-30 <a href="#cfc365a4fb">滋賀大★byemail</a><br />
 2020-07-31 <a href="#f2a049faff">岡山理科大.人工知能分野</a><br />
-2020-07-31 <a href="#ed8764462a">九州国際大.情報学基礎</a><br />
+2020-07-31 <a href="#73585c7c51"><strike>九州国際大.情報学基礎(badformat)</strike></a><br />
 2020-07-31 <a href="#425f4c047f">埼玉工業大.情報学</a><br />
-2020-07-31 <a href="#837a6a163d">法政大.信号処理、統計、計測、機械学習分野</a><br />
-2020-07-31 <a href="#e24f2cb09e">名古屋大.人間情報学</a><br />
+2020-07-31 <a href="#e6593754c5"><strike>法政大.信号処理、統計、計測、機械学習分野(推薦書)</strike></a><br />
+2020-07-31 <a href="#820744a453">名古屋大.人間情報学★教授</a><br />
 2020-08-12 <a href="#5287ecef42">三重大.知能工学講座・データサイエンス2jobs</a><br />
 2020-08-17 <a href="#2a5cbddcf2">NAIST.ロボティクス分野</a><br />
 2020-08-17 <a href="#6bedfcd2ce">筑波大</a><br />
@@ -90,7 +90,7 @@
 <h2 id="近畿大情報セキュリティ評価推薦書-2020-07-20-top"><strike>近畿大情報セキュリティ評価★推薦書</strike> (2020-07-20) <span id="a496e2fbce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京大missed13日締切-2020-07-21-top"><strike>東京大(missed13日締切)</strike> (2020-07-21) <span id="a94f938232"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="慶應義塾.情報工学分野推薦書-2020-07-24-top"><strike>慶應義塾.情報工学分野★推薦書</strike> (2020-07-24) <span id="3154cd9345"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="滋賀大-2020-07-30-top">滋賀大 (2020-07-30) <span id="a59d532b7d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="滋賀大byemail-2020-07-30-top">滋賀大★byemail (2020-07-30) <span id="cfc365a4fb"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：22<br />
 データ番号 ：D120041018 [NEW]<br />
 更新日 ：2020年04月25日<br />
@@ -117,18 +117,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年07月31日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051351&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051351&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="九州国際大.情報学基礎-2020-07-31-top">九州国際大.情報学基礎 (2020-07-31) <span id="ed8764462a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 38<br />
-id : D120060550 [NEW]<br />
-update : 2020年06月11日<br />
-univ : 九州国際大学<br />
-title : 教員の公募について【情報処理、数学　教授、准教授または助教】<br />
-field : 情報学 - 情報学基礎<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年07月31日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060550&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060550&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="九州国際大.情報学基礎badformat-2020-07-31-top"><strike>九州国際大.情報学基礎(badformat)</strike> (2020-07-31) <span id="73585c7c51"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="埼玉工業大.情報学-2020-07-31-top">埼玉工業大.情報学 (2020-07-31) <span id="425f4c047f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 30<br />
 id : D120060427 [NEW]<br />
@@ -141,19 +130,8 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年07月31日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060427&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060427&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="法政大.信号処理統計計測機械学習分野-2020-07-31-top">法政大.信号処理、統計、計測、機械学習分野 (2020-07-31) <span id="837a6a163d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 5<br />
-id : D120060017 [NEW]<br />
-update : 2020年06月03日<br />
-univ : 法政大学<br />
-title : 准教授または専任講師の公募（情報工学分野―信号処理、統計、計測、機械学習分野）<br />
-field : 情報学 - 全て 工学 - 電気電子工学 総合理工 - 計算科学<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年07月31日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060017&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060017&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="名古屋大.人間情報学-2020-07-31-top">名古屋大.人間情報学 (2020-07-31) <span id="e24f2cb09e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="法政大.信号処理統計計測機械学習分野推薦書-2020-07-31-top"><strike>法政大.信号処理、統計、計測、機械学習分野(推薦書)</strike> (2020-07-31) <span id="e6593754c5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="名古屋大.人間情報学教授-2020-07-31-top">名古屋大.人間情報学★教授 (2020-07-31) <span id="820744a453"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 27<br />
 id : D120060324 [NEW]<br />
 update : 2020年06月06日<br />
