--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -11,9 +11,9 @@
 2020-07-21 <a href="#a94f938232"><strike>東京大(missed13日締切)</strike></a><br />
 2020-07-24 <a href="#3154cd9345"><strike>慶應義塾.情報工学分野★推薦書</strike></a><br />
 2020-07-30 <a href="#cfc365a4fb">滋賀大★byemail</a><br />
-2020-07-31 <a href="#f2a049faff">岡山理科大.人工知能分野</a><br />
+2020-07-31 <a href="#18e59c9346"><strong>埼玉工業大.情報学★エクセル業績</strong></a><br />
+2020-07-31 <a href="#1beb94e1bd"><strike>岡山理科大(ous).人工知能★toomuchwork+morelater</strike></a><br />
 2020-07-31 <a href="#73585c7c51"><strike>九州国際大.情報学基礎(badformat)</strike></a><br />
-2020-07-31 <a href="#425f4c047f">埼玉工業大.情報学</a><br />
 2020-07-31 <a href="#e6593754c5"><strike>法政大.信号処理、統計、計測、機械学習分野(推薦書)</strike></a><br />
 2020-07-31 <a href="#820744a453">名古屋大.人間情報学★教授</a><br />
 2020-08-12 <a href="#5287ecef42">三重大.知能工学講座・データサイエンス2jobs</a><br />
@@ -43,7 +43,7 @@
 2020-08-31 <a href="#306428a9df">駒澤大.情報分野</a><br />
 2020-08-31 <a href="#039122b303">京都大.通信情報システム</a><br />
 2020-08-31 <a href="#5fa1a2f2e1">株式会社Nextremer.計算科学.quantum</a><br />
-2020-08-31 <a href="#38136546d5">岡山理科大.情報数理.情報工学.2posts</a><br />
+2020-08-31 <a href="#1a7a819628">岡山理科大(ous).情報数理.情報工学.2posts</a><br />
 2020-08-31 <a href="#e9bdb6257a">岡山大学.サイバーフィジカル情報の応用研究</a><br />
 2020-09-07 <a href="#9d2f056f03">法政大学.情報学・計算基盤</a><br />
 2020-09-07 <a href="#abe8802bd2">明治大</a><br />
@@ -105,31 +105,9 @@
 募集終了日 ：2020年07月30日<br />
 ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041018&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041018&amp;ln_jor=0&amp;top_btn=1</a><br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="岡山理科大.人工知能分野-2020-07-31-top">岡山理科大.人工知能分野 (2020-07-31) <span id="f2a049faff"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 29<br />
-id : D120051351 [NEW]<br />
-update : 2020年06月02日<br />
-univ : 岡山理科大学<br />
-title : 准教授または講師の公募（コンピュータサイエンス，又は人工知能分野）<br />
-field : 情報学 - 全て<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年07月31日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051351&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051351&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="埼玉工業大.情報学エクセル業績-2020-07-31-top"><strong>埼玉工業大.情報学★エクセル業績</strong> (2020-07-31) <span id="18e59c9346"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="岡山理科大ous.人工知能toomuchworkmorelater-2020-07-31-top"><strike>岡山理科大(ous).人工知能★toomuchwork+morelater</strike> (2020-07-31) <span id="1beb94e1bd"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="九州国際大.情報学基礎badformat-2020-07-31-top"><strike>九州国際大.情報学基礎(badformat)</strike> (2020-07-31) <span id="73585c7c51"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="埼玉工業大.情報学-2020-07-31-top">埼玉工業大.情報学 (2020-07-31) <span id="425f4c047f"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 30<br />
-id : D120060427 [NEW]<br />
-update : 2020年06月09日<br />
-univ : 埼玉工業大学<br />
-title : 教授、准教授、講師または助教を合わせて2名(IT分野)<br />
-field : 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当 助教相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年07月31日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060427&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060427&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="法政大.信号処理統計計測機械学習分野推薦書-2020-07-31-top"><strike>法政大.信号処理、統計、計測、機械学習分野(推薦書)</strike> (2020-07-31) <span id="e6593754c5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名古屋大.人間情報学教授-2020-07-31-top">名古屋大.人間情報学★教授 (2020-07-31) <span id="820744a453"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 27<br />
@@ -400,7 +378,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年08月31日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070882&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070882&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="岡山理科大.情報数理.情報工学.2posts-2020-08-31-top">岡山理科大.情報数理.情報工学.2posts (2020-08-31) <span id="38136546d5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="岡山理科大ous.情報数理.情報工学.2posts-2020-08-31-top">岡山理科大(ous).情報数理.情報工学.2posts (2020-08-31) <span id="1a7a819628"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>No. ：57<br />
 データ番号 ：D120061713 [NEW]<br />
 更新日 ：2020年07月01日<br />
