--- a/gcal/fundhunt.html
+++ b/gcal/fundhunt.html
@@ -11,7 +11,7 @@
 <p>年度 2020年度<br />
 募集機関・財団名 国土技術政策総合研究所<br />
 事業名 インフラに関するデータ連携を目的としたメタデータの自動作成及びデータ統合技術に関する研究<br />
-リンク <a href="http://www.nilim.go.jp/lab/bbg/kyoudou/index.html" class="uri">http://www.nilim.go.jp/lab/bbg/kyoudou/index.html</a><br />
+リンク <a href="http://www.nilim.go.jp/lab/bbg/kyoudou/index.html">http://www.nilim.go.jp/lab/bbg/kyoudou/index.html</a><br />
 課題詳細 本委託研究は、データ連携を踏まえたデータ利活用するための技術開発として、メタデータの生成及びデータを自動で統合できる技術を開発するものである。<br />
 応募者詳細 ① 提出者の所属機関<br />
 Ⅰ　大学等の研究機関（大学共同利用機関法人を含む）<br />
@@ -35,7 +35,7 @@
 申請期限 2020年08月05日 募集状況 募集中<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="三谷産業フェア金沢-2020-08-15-top">三谷産業フェア★金沢 (2020-08-15) <span id="79792e2a8d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p><a href="https://www.mitani.co.jp/mbc/index.html#target" class="uri">https://www.mitani.co.jp/mbc/index.html#target</a></p>
+<p><a href="https://www.mitani.co.jp/mbc/index.html#target">https://www.mitani.co.jp/mbc/index.html#target</a></p>
 <p>ICT関連における先端技術を活用した 新事業・サービス<br />
 デジタルテクノロジーの活用によるビジネスイノーベションに寄与する取組みや、<br />
 独創的なUI/UXなどの優れたデザインを活用したサービスにより、<br />
@@ -75,7 +75,7 @@
 年度 2020年度<br />
 募集機関・財団名 本多記念会<br />
 事業名 本多記念賞<br />
-リンク <a href="http://hondakinenkai.or.jp/misc/download.html" class="uri">http://hondakinenkai.or.jp/misc/download.html</a><br />
+リンク <a href="http://hondakinenkai.or.jp/misc/download.html">http://hondakinenkai.or.jp/misc/download.html</a><br />
 課題詳細 わが国に国籍を有する者で、理工学、特に金属およびその周辺材料に関連する研究を行い、基礎または応用面において優れた成果を挙げ、科学文化の進展に卓抜な貢献をした者を対象とする。<br />
 なお、団体は受賞対象としない。<br />
 応募者詳細 推薦者<br />
@@ -89,7 +89,7 @@
 <p>年度 2020年度<br />
 募集機関・財団名 本多記念会<br />
 事業名 本多フロンティア賞<br />
-リンク <a href="http://hondakinenkai.or.jp/misc/download.html" class="uri">http://hondakinenkai.or.jp/misc/download.html</a><br />
+リンク <a href="http://hondakinenkai.or.jp/misc/download.html">http://hondakinenkai.or.jp/misc/download.html</a><br />
 課題詳細 理工学、特に金属材料などの無機材料、有機材料及びこれらの複合材料の３分野のいずれかの分野において、学術面あるいは技術面において画期的な発見又は発明を行った者を対象とする。<br />
 なお、団体は受賞対象としない。<br />
 応募者詳細 推薦者<br />
@@ -103,7 +103,7 @@
 <p>年度 2020年度<br />
 募集機関・財団名 本多記念会<br />
 事業名 本多記念研究奨励賞<br />
-リンク <a href="http://hondakinenkai.or.jp/misc/download.html" class="uri">http://hondakinenkai.or.jp/misc/download.html</a><br />
+リンク <a href="http://hondakinenkai.or.jp/misc/download.html">http://hondakinenkai.or.jp/misc/download.html</a><br />
 課題詳細 わが国に国籍を有する者で、理工学、特に金属に関連する研究を行い、優れた研究成果を挙げ、または発明を行ったもので、将来の発展を期待できる若い研究者を対象とする。<br />
 応募者詳細 受賞発表の年の３月末日現在満４０歳以下の者（今回は昭和５５年４月１日以降に生まれた者。<br />
 ただし、過去に本多記念研究奨励賞を受賞した者を除く。）で、共同研究の場合は主研究者であること。自薦でも良い。（なお、学位の有無を記入してください。）<br />
@@ -115,11 +115,11 @@
 申請期限 2020年09月11日 募集状況 募集中<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="airpf人工知能研究振興財団-2020-09-30-top">airpf人工知能研究振興財団 (2020-09-30) <span id="70159d238b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p><a href="http://www.airpf.or.jp/josei.html" class="uri">http://www.airpf.or.jp/josei.html</a></p>
+<p><a href="http://www.airpf.or.jp/josei.html">http://www.airpf.or.jp/josei.html</a></p>
 <p>年度 2020年度<br />
 募集機関・財団名 人工知能研究振興財団<br />
 事業名 研究助成<br />
-リンク <a href="http://www.airpf.or.jp/index.html" class="uri">http://www.airpf.or.jp/index.html</a><br />
+リンク <a href="http://www.airpf.or.jp/index.html">http://www.airpf.or.jp/index.html</a><br />
 課題詳細 研究テーマ<br />
 人工知能及び関連技術分野（人工知能を活用した情報処理技術、情報通信技術等）の高度化に関する調査、研究及び開発（以下「研究」という）であって、次の各号に掲げるものとします。<br />
 (1) 産業・環境分野における技術高度化並びに生産性改善のための人工知能及びその利用技術に関する研究<br />
