--- a/gcal/fundhunt.html
+++ b/gcal/fundhunt.html
@@ -2,39 +2,13 @@
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=UTF8">
 <p>this file is generated automatically, do not make manual changes to it!</p>
 <p>2020-07-22 <a href="#ea6becef05"><strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike></a><br />
-2020-08-05 <a href="#86ee610402">国土技術政策総合研究所・データ結合999.999.999千円</a><br />
-2020-08-15 <a href="#79792e2a8d">三谷産業フェア★金沢</a><br />
+2020-08-05 <a href="#b45e39cd0b"><strike>国土技術政策総合研究所・データ結合999.999.999千円</strike></a><br />
+2020-09-01 <a href="#79792e2a8d">三谷産業フェア★金沢</a><br />
 2020-09-11 <a href="#7ac92177c4">本多記念賞200万・50万・30万.2items</a><br />
 2020-09-30 <a href="#70159d238b">airpf人工知能研究振興財団</a></p>
 <h2 id="国立研究開発法人科学技術振興機構.ioe社会のエネルギーシステム-2020-07-22-top"><strike>国立研究開発法人科学技術振興機構.「IoE社会のエネルギーシステム」</strike> (2020-07-22) <span id="ea6becef05"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="国土技術政策総合研究所データ結合999.999.999千円-2020-08-05-top">国土技術政策総合研究所・データ結合999.999.999千円 (2020-08-05) <span id="86ee610402"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>年度 2020年度<br />
-募集機関・財団名 国土技術政策総合研究所<br />
-事業名 インフラに関するデータ連携を目的としたメタデータの自動作成及びデータ統合技術に関する研究<br />
-リンク <a href="http://www.nilim.go.jp/lab/bbg/kyoudou/index.html">http://www.nilim.go.jp/lab/bbg/kyoudou/index.html</a><br />
-課題詳細 本委託研究は、データ連携を踏まえたデータ利活用するための技術開発として、メタデータの生成及びデータを自動で統合できる技術を開発するものである。<br />
-応募者詳細 ① 提出者の所属機関<br />
-Ⅰ　大学等の研究機関（大学共同利用機関法人を含む）<br />
-Ⅱ　国（事業団、特殊会社及び独立行政法人並びに特殊法人等改革基本法の対象法人を含む）の研究機関<br />
-Ⅲ　地方公共団体の研究機関<br />
-Ⅳ　研究を目的に持つ公益法人（特例民法法人を含む）、一般社団法人、一般財団法人<br />
-Ⅴ　民間研究機関（研究業務を行っている機関、但し、国総研における建設コンサルタント業務に係る一般競争（指命競争）参加資格の認定を受けている機関に限る）<br />
-Ⅵ　その他、特に所長が委託研究を実施することが適当であると認めた法人または個人（但<br />
-し、公募時に予め定められた条件を満たす者に限る）<br />
-Ⅶ　前Ⅰ号からⅥ号の要件を満たす複数の機関または研究者からなる共同研究体（但し、契約時に共同企業体協定書を締結した者に限る）</p>
-<p>② 提出者の資格要件<br />
-Ⅰ　予算決算及び会計令（昭和２２年勅令第１６５号。以下「予決令」という。）第７０条及び第７１条の規定に該当しない者であること。<br />
-Ⅱ　警察当局から、暴力団員が実質的に経営を支配する者又はこれに準ずるものとして、国土交通省公共事業等からの排除要請があり、当該状態が継続している者でないこと。<br />
-Ⅲ　国土技術政策総合研究所長から建設コンサルタント業務等に関し指名停止を受けている期間中の者でないこと。<br />
-Ⅳ　会社更生法（平成14年法律第154号）に基づき更生手続開始の申立てがなされている者又は民事再生法（平成11年法律第225号）に基づき再生手続開始の申立てがなされている者でないこと。<br />
-Ⅴ　①Ⅶに該当する者は、委託契約の締結を行う際には、事前に、「国土技術政策総合研究所の委託研究における共同研究体方式の取り扱いについて」（平成22年12月1日付け国土技術政策総合研究所長）に示すところにより共同研究体協定書を締結し、提出すること。<br />
-助成期間 (最短) 1年 から (最長) 1年<br />
-助成率 -<br />
-限度額 999,999,999千円<br />
-採用予定数 -<br />
-申請期限 2020年08月05日 募集状況 募集中<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="三谷産業フェア金沢-2020-08-15-top">三谷産業フェア★金沢 (2020-08-15) <span id="79792e2a8d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="国土技術政策総合研究所データ結合999.999.999千円-2020-08-05-top"><strike>国土技術政策総合研究所・データ結合999.999.999千円</strike> (2020-08-05) <span id="b45e39cd0b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="三谷産業フェア金沢-2020-09-01-top">三谷産業フェア★金沢 (2020-09-01) <span id="79792e2a8d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p><a href="https://www.mitani.co.jp/mbc/index.html#target">https://www.mitani.co.jp/mbc/index.html#target</a></p>
 <p>ICT関連における先端技術を活用した 新事業・サービス<br />
 デジタルテクノロジーの活用によるビジネスイノーベションに寄与する取組みや、<br />
