--- a/gcal/jobhunt.html
+++ b/gcal/jobhunt.html
@@ -7,43 +7,43 @@
 2020-07-15 <a href="#4417a089ab"><strike>同志社大</strike></a><br />
 2020-07-17 <a href="#0f634778c3"><strike>千葉商科大</strike></a><br />
 2020-07-17 <a href="#11424e7100"><strike>千葉商科大.情報・メディア</strike></a><br />
-2020-07-20 <a href="#a496e2fbce"><strike>近畿大情報セキュリティ評価★推薦書</strike></a><br />
+2020-07-20 <a href="#9c95c93d9b"><strike>近畿大情報セキュリティ評価✘推薦書</strike></a><br />
 2020-07-21 <a href="#a94f938232"><strike>東京大(missed13日締切)</strike></a><br />
-2020-07-24 <a href="#3154cd9345"><strike>慶應義塾.情報工学分野★推薦書</strike></a><br />
-2020-07-30 <a href="#cfc365a4fb">滋賀大★byemail</a><br />
-2020-07-31 <a href="#e6593754c5"><strike>法政大.信号処理、統計、計測、機械学習分野(推薦書)</strike></a><br />
-2020-07-31 <a href="#73585c7c51"><strike>九州国際大.情報学基礎(badformat)</strike></a><br />
-2020-07-31 <a href="#1beb94e1bd"><strike>岡山理科大(ous).人工知能★toomuchwork+morelater</strike></a><br />
+2020-07-24 <a href="#f60e9eda87"><strike>慶應義塾.情報工学分野✘推薦書</strike></a><br />
+2020-07-30 <a href="#2b49852886"><strong>滋賀大✌email↓rejectletter</strong></a><br />
+2020-07-31 <a href="#5be1a16a7d"><strike>法政大.信号処理、統計、計測、機械学習分野✘推薦書</strike></a><br />
+2020-07-31 <a href="#88df76a674"><strike>九州国際大.情報学基礎✘badformat</strike></a><br />
+2020-07-31 <a href="#3b91ad90e6"><strike>岡山理科大(ous).人工知能✘toomuchwork+morelater</strike></a><br />
 2020-07-31 <a href="#fb8fa0cb3e"><strong>名古屋大.人間情報学★教授</strong></a><br />
 2020-07-31 <a href="#18e59c9346"><strong>埼玉工業大.情報学★エクセル業績</strong></a><br />
 2020-08-12 <a href="#eba26c37a7"><strong>三重大.知能工学講座・データサイエンス2jobs</strong></a><br />
 2020-08-17 <a href="#cc72ebc329"><strong>筑波大</strong></a><br />
 2020-08-17 <a href="#6813c0372e"><strike>NAIST.ロボティクス分野</strike></a><br />
 2020-08-19 <a href="#6c5b98a780"><strong>岡山県立大.知覚情報処理</strong></a><br />
-2020-08-19 <a href="#58dad3b578"><strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs★推薦書</strike></a><br />
-2020-08-21 <a href="#4c84695e3c">●玉川大学.国際教養学科</a><br />
-2020-08-21 <a href="#31a2a90de5">龍谷大学・通信工学分野</a><br />
-2020-08-24 <a href="#e9d0f232de">中京大.コンピュータ処理論及び関連科目</a><br />
-2020-08-25 <a href="#50bac5cba6"><strike>日本大.ロボット・制御★mismatch</strike></a><br />
+2020-08-19 <a href="#ebe3a401a3"><strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs✘推薦書</strike></a><br />
+2020-08-21 <a href="#ec0c9d0945"><strong>玉川大学.国際教養学科✌jrec</strong></a><br />
+2020-08-21 <a href="#e9e97adb29"><strong>龍谷大学・通信工学分野★給料明記</strong></a><br />
+2020-08-24 <a href="#4d3c9024ff"><strong>中京大.コンピュータ処理論及び関連科目</strong></a><br />
+2020-08-25 <a href="#3b52ef5769"><strike>日本大.ロボット・制御✘mismatch</strike></a><br />
 2020-08-25 <a href="#f539e83162">大阪大学.社会イノベーション部門</a><br />
-2020-08-28 <a href="#1910c17cce">●広島工業大・経営情報システム</a><br />
+2020-08-28 <a href="#7a9ddac77a"><strong>広島工業大・経営情報システム✌jrec</strong></a><br />
 2020-08-28 <a href="#2df1a7a510">和光大学.情報の基礎</a><br />
 2020-08-31 <a href="#1d2deb79a1">立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース</a><br />
 2020-08-31 <a href="#7863862135"><strike>般社団法人CRD</strike></a><br />
-2020-08-31 <a href="#2113e18e0a"><strike>日本工業大★推薦書</strike></a><br />
+2020-08-31 <a href="#4bb5c2134d"><strike>日本工業大✘推薦書</strike></a><br />
 2020-08-31 <a href="#955f81b4e2">東京都立大.情報学基礎.2posts</a><br />
 2020-08-31 <a href="#cd47a293be">東京都市大学・情報学</a><br />
 2020-08-31 <a href="#8b4d0a2dce">東京都市大学・経営情報システム</a><br />
-2020-08-31 <a href="#1288510301"><strike>東京電機大.人間情報学★推薦書</strike></a><br />
+2020-08-31 <a href="#37848dfdf7"><strike>東京電機大.人間情報学✘推薦書</strike></a><br />
 2020-08-31 <a href="#c56f9be485">滋賀県立大.センシング工学分野</a><br />
 2020-08-31 <a href="#a8594191cf">工学院大学.複合領域-デザイン学-総合理工-計算科学</a><br />
 2020-08-31 <a href="#28aaf90588">工学院大学.情報学フロンティア-情報学</a><br />
-2020-08-31 <a href="#5745bd4e0c"><strike>京都大.通信情報システム★試用</strike></a><br />
+2020-08-31 <a href="#85650c17d1"><strike>京都大.通信情報システム中✘試用</strike></a><br />
 2020-08-31 <a href="#840cca4261"><strike>株式会社Nextremer.計算科学.quantum</strike></a><br />
 2020-08-31 <a href="#1a7a819628">岡山理科大(ous).情報数理.情報工学.2posts</a><br />
 2020-08-31 <a href="#e9bdb6257a">岡山大学.サイバーフィジカル情報の応用研究</a><br />
-2020-08-31 <a href="#b41b6e00c8">●大阪大.情報科学</a><br />
-2020-08-31 <a href="#c4e54c6397">●駒澤大.情報分野</a><br />
+2020-08-31 <a href="#f7ab33943c"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong></a><br />
+2020-08-31 <a href="#fe42bd3f2b"><strong>駒澤大.情報分野✌jrec</strong></a><br />
 2020-09-07 <a href="#9d2f056f03">法政大学.情報学・計算基盤</a><br />
 2020-09-07 <a href="#abe8802bd2">明治大</a><br />
 2020-09-10 <a href="#7028f433f1">広島工業大学・コンピュータシステム</a><br />
@@ -103,71 +103,23 @@
 <h2 id="同志社大-2020-07-15-top"><strike>同志社大</strike> (2020-07-15) <span id="4417a089ab"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="千葉商科大-2020-07-17-top"><strike>千葉商科大</strike> (2020-07-17) <span id="0f634778c3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="千葉商科大.情報メディア-2020-07-17-top"><strike>千葉商科大.情報・メディア</strike> (2020-07-17) <span id="11424e7100"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="近畿大情報セキュリティ評価推薦書-2020-07-20-top"><strike>近畿大情報セキュリティ評価★推薦書</strike> (2020-07-20) <span id="a496e2fbce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="近畿大情報セキュリティ評価推薦書-2020-07-20-top"><strike>近畿大情報セキュリティ評価✘推薦書</strike> (2020-07-20) <span id="9c95c93d9b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京大missed13日締切-2020-07-21-top"><strike>東京大(missed13日締切)</strike> (2020-07-21) <span id="a94f938232"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="慶應義塾.情報工学分野推薦書-2020-07-24-top"><strike>慶應義塾.情報工学分野★推薦書</strike> (2020-07-24) <span id="3154cd9345"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="滋賀大byemail-2020-07-30-top">滋賀大★byemail (2020-07-30) <span id="cfc365a4fb"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：22<br />
-データ番号 ：D120041018 [NEW]<br />
-更新日 ：2020年04月25日<br />
-機関名 ：滋賀大学<br />
-タイトル ：教授・准教授の公募（情報学・数物系科学・総合理工）<br />
-研究分野 ：情報学 - 情報学基礎<br />
-数物系科学 - 数学<br />
-総合理工 - 計算科学<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年07月30日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041018&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041018&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="慶應義塾.情報工学分野推薦書-2020-07-24-top"><strike>慶應義塾.情報工学分野✘推薦書</strike> (2020-07-24) <span id="f60e9eda87"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="滋賀大emailrejectletter-2020-07-30-top"><strong>滋賀大✌email↓rejectletter</strong> (2020-07-30) <span id="2b49852886"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="埼玉工業大.情報学エクセル業績-2020-07-31-top"><strong>埼玉工業大.情報学★エクセル業績</strong> (2020-07-31) <span id="18e59c9346"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="名古屋大.人間情報学教授-2020-07-31-top"><strong>名古屋大.人間情報学★教授</strong> (2020-07-31) <span id="fb8fa0cb3e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="岡山理科大ous.人工知能toomuchworkmorelater-2020-07-31-top"><strike>岡山理科大(ous).人工知能★toomuchwork+morelater</strike> (2020-07-31) <span id="1beb94e1bd"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="九州国際大.情報学基礎badformat-2020-07-31-top"><strike>九州国際大.情報学基礎(badformat)</strike> (2020-07-31) <span id="73585c7c51"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="法政大.信号処理統計計測機械学習分野推薦書-2020-07-31-top"><strike>法政大.信号処理、統計、計測、機械学習分野(推薦書)</strike> (2020-07-31) <span id="e6593754c5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="岡山理科大ous.人工知能toomuchworkmorelater-2020-07-31-top"><strike>岡山理科大(ous).人工知能✘toomuchwork+morelater</strike> (2020-07-31) <span id="3b91ad90e6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="九州国際大.情報学基礎badformat-2020-07-31-top"><strike>九州国際大.情報学基礎✘badformat</strike> (2020-07-31) <span id="88df76a674"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="法政大.信号処理統計計測機械学習分野推薦書-2020-07-31-top"><strike>法政大.信号処理、統計、計測、機械学習分野✘推薦書</strike> (2020-07-31) <span id="5be1a16a7d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="三重大.知能工学講座データサイエンス2jobs-2020-08-12-top"><strong>三重大.知能工学講座・データサイエンス2jobs</strong> (2020-08-12) <span id="eba26c37a7"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="筑波大-2020-08-17-top"><strong>筑波大</strong> (2020-08-17) <span id="cc72ebc329"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="naist.ロボティクス分野-2020-08-17-top"><strike>NAIST.ロボティクス分野</strike> (2020-08-17) <span id="6813c0372e"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山県立大.知覚情報処理-2020-08-19-top"><strong>岡山県立大.知覚情報処理</strong> (2020-08-19) <span id="6c5b98a780"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs推薦書-2020-08-19-top"><strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs★推薦書</strike> (2020-08-19) <span id="58dad3b578"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="玉川大学.国際教養学科-2020-08-21-top">●玉川大学.国際教養学科 (2020-08-21) <span id="4c84695e3c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：10<br />
-データ番号 ：D120070202 [UPDATE]<br />
-更新日 ：2020年07月10日<br />
-機関名 ：玉川大学<br />
-タイトル ：玉川大学経営学部国際経営学科教員（教授または准教授）の公募について<br />
-研究分野 ：社会科学 - 経営学<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年08月21日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070202&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070202&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="龍谷大学通信工学分野-2020-08-21-top">龍谷大学・通信工学分野 (2020-08-21) <span id="31a2a90de5"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 2<br />
-id : D120051249 [UPDATE]<br />
-update : 2020年08月04日<br />
-univ : 龍谷大学・通信工学分野<br />
-title : 教授、准教授または講師の公募（電子、通信工学分野）<br />
-field : 工学 - 電気電子工学 情報学 - 全て<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年08月21日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051249&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120051249&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="中京大.コンピュータ処理論及び関連科目-2020-08-24-top">中京大.コンピュータ処理論及び関連科目 (2020-08-24) <span id="e9d0f232de"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 7<br />
-id : D120060246 [UPDATE]<br />
-update : 2020年06月09日<br />
-univ : 中京大学<br />
-title : 中京大学教養教育研究院専任教員公募（コンピュータ処理論及び関連科目）（2021年4月採用）<br />
-field : 情報学 - 計算基盤 総合理工 - 計算科学 工学 - 電気電子工学<br />
-post : 教授相当 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年08月24日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060246&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060246&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs推薦書-2020-08-19-top"><strike>近畿大.経営ビジネス学科1.電気電子工学科1.情報学科3jobs✘推薦書</strike> (2020-08-19) <span id="ebe3a401a3"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="玉川大学.国際教養学科jrec-2020-08-21-top"><strong>玉川大学.国際教養学科✌jrec</strong> (2020-08-21) <span id="ec0c9d0945"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="龍谷大学通信工学分野給料明記-2020-08-21-top"><strong>龍谷大学・通信工学分野★給料明記</strong> (2020-08-21) <span id="e9e97adb29"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="中京大.コンピュータ処理論及び関連科目-2020-08-24-top"><strong>中京大.コンピュータ処理論及び関連科目</strong> (2020-08-24) <span id="4d3c9024ff"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="大阪大学.社会イノベーション部門-2020-08-25-top">大阪大学.社会イノベーション部門 (2020-08-25) <span id="f539e83162"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 23<br />
 id : D120071218 [NEW]<br />
@@ -180,22 +132,8 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年08月25日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071218&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120071218&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="日本大.ロボット制御mismatch-2020-08-25-top"><strike>日本大.ロボット・制御★mismatch</strike> (2020-08-25) <span id="50bac5cba6"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="広島工業大経営情報システム-2020-08-28-top">●広島工業大・経営情報システム (2020-08-28) <span id="1910c17cce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：34<br />
-データ番号 ：D120041390 [NEW]<br />
-更新日 ：2020年05月01日<br />
-機関名 ：広島工業大学<br />
-タイトル ：教授、准教授、講師又は助教の公募（経営情報システム（経営工学、オペレーションズ・リサーチ、プロジェクトマネジメント、情報システム開発とマネジメント、意思決定支援システムなど）に関連する分野）<br />
-研究分野 ：情報学 - 全て<br />
-その他 - 経営情報システム<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-助教相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年08月28日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041390&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120041390&amp;ln_jor=0&amp;top_btn=1</a><br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="日本大.ロボット制御mismatch-2020-08-25-top"><strike>日本大.ロボット・制御✘mismatch</strike> (2020-08-25) <span id="3b52ef5769"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="広島工業大経営情報システムjrec-2020-08-28-top"><strong>広島工業大・経営情報システム✌jrec</strong> (2020-08-28) <span id="7a9ddac77a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="和光大学.情報の基礎-2020-08-28-top">和光大学.情報の基礎 (2020-08-28) <span id="2df1a7a510"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 21<br />
 id : D120070774 [NEW]<br />
@@ -208,33 +146,8 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年08月28日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070774&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070774&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="駒澤大.情報分野-2020-08-31-top">●駒澤大.情報分野 (2020-08-31) <span id="c4e54c6397"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>No. ：37<br />
-データ番号 ：D120061721 [NEW]<br />
-更新日 ：2020年07月01日<br />
-機関名 ：駒澤大学<br />
-タイトル ：グローバル・メディア・スタディーズ学部専任教員（情報分野，任期なし）の募集について<br />
-研究分野 ：情報学 - 全て<br />
-職種 ： 教授相当<br />
-准教授・常勤専任講師相当<br />
-助教相当<br />
-勤務形態 ： 常勤 (任期なし)<br />
-募集終了日 ：2020年08月31日<br />
-ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061721&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061721&amp;ln_jor=0&amp;top_btn=1</a><br />
-———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="大阪大.情報科学-2020-08-31-top">●大阪大.情報科学 (2020-08-31) <span id="b41b6e00c8"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<p>no : 5<br />
-id : D120070733 [NEW]<br />
-update : 2020年07月13日<br />
-univ : 大阪大学<br />
-title : 准教授の公募（情報科学）<br />
-field : 情報学 - 計算基盤<br />
-post : 准教授・常勤専任講師相当<br />
-tenure : 常勤 (任期なし)<br />
-deadline : 2020年08月31日<br />
-url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070733&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120070733&amp;ln_jor=0&amp;top_btn=1</a> JREC-IN Portalより、ご登録のマッチング条件に合った新着求人公募情報をお知らせします。 ※公開中の情報が更新された場合も含まれますので、ご了承ください。 ※新規情報には[NEW]、更新情報には[UPDATE]が表示されます。 ※URL欄に[→サイト名]が表示された情報は、連携する外部求人サイトから提供されたものです。求人の詳細は、各サイトの求人ページへジャンプし表示します。 —【求人公募情報】— ———-<br />
-<span style="color:#666;"><a href="#top">→top</a></span></p>
+<h2 id="駒澤大.情報分野jrec-2020-08-31-top"><strong>駒澤大.情報分野✌jrec</strong> (2020-08-31) <span id="fe42bd3f2b"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="大阪大.情報科学試用6カ月jrec-2020-08-31-top"><strong>大阪大.情報科学☢試用6カ月✌jrec</strong> (2020-08-31) <span id="f7ab33943c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="岡山大学.サイバーフィジカル情報の応用研究-2020-08-31-top">岡山大学.サイバーフィジカル情報の応用研究 (2020-08-31) <span id="e9bdb6257a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 23<br />
 id : D120070882 [NEW]<br />
@@ -276,7 +189,7 @@ No. ：58<br />
 ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
 <h2 id="株式会社nextremer.計算科学.quantum-2020-08-31-top"><strike>株式会社Nextremer.計算科学.quantum</strike> (2020-08-31) <span id="840cca4261"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
-<h2 id="京都大.通信情報システム試用-2020-08-31-top"><strike>京都大.通信情報システム★試用</strike> (2020-08-31) <span id="5745bd4e0c"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="京都大.通信情報システム中試用-2020-08-31-top"><strike>京都大.通信情報システム中✘試用</strike> (2020-08-31) <span id="85650c17d1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="工学院大学.情報学フロンティア-情報学-2020-08-31-top">工学院大学.情報学フロンティア-情報学 (2020-08-31) <span id="28aaf90588"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 20<br />
 id : D120070867 [NEW]<br />
@@ -313,7 +226,7 @@ tenure : 常勤 (任期なし)<br />
 deadline : 2020年08月31日<br />
 url : <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060878&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120060878&amp;ln_jor=0&amp;top_btn=1</a> ———-<br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="東京電機大.人間情報学推薦書-2020-08-31-top"><strike>東京電機大.人間情報学★推薦書</strike> (2020-08-31) <span id="1288510301"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="東京電機大.人間情報学推薦書-2020-08-31-top"><strike>東京電機大.人間情報学✘推薦書</strike> (2020-08-31) <span id="37848dfdf7"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="東京都市大学経営情報システム-2020-08-31-top">東京都市大学・経営情報システム (2020-08-31) <span id="8b4d0a2dce"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>no : 4<br />
 id : D120031348 [UPDATE]<br />
@@ -366,7 +279,7 @@ No. ：3<br />
 募集終了日 ：2020年08月31日<br />
 ＵＲＬ ： <a href="https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061271&amp;ln_jor=0&amp;top_btn=1">https://jrecin.jst.go.jp/seek/SeekJorDetail?fn=4&amp;id=D120061271&amp;ln_jor=0&amp;top_btn=1</a><br />
 <span style="color:#666;"><a href="#top">→top</a></span></p>
-<h2 id="日本工業大推薦書-2020-08-31-top"><strike>日本工業大★推薦書</strike> (2020-08-31) <span id="2113e18e0a"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
+<h2 id="日本工業大推薦書-2020-08-31-top"><strike>日本工業大✘推薦書</strike> (2020-08-31) <span id="4bb5c2134d"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="般社団法人crd-2020-08-31-top"><strike>般社団法人CRD</strike> (2020-08-31) <span id="7863862135"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <h2 id="立命館大学2jobs1eng.情報理工学部.セキュリティネットワークコース-2020-08-31-top">立命館大学2jobs(1eng).情報理工学部.セキュリティ・ネットワークコース (2020-08-31) <span id="1d2deb79a1"></span> <span style="color:#666;"><a href="#top">→top</a></span></h2>
 <p>JREC-IN URL：<br />
